# hscheme

./: .dir-locals.el  README.md  hscheme.cabal
app/: Main.hs
scheme/: stdlib.scm
src/: Ast.hs  Error.hs  Evaluator.hs  Parser.hs
src/Evaluator/: BuiltIn.hs  Environment.hs
src/Evaluator/BuiltIn/: IO.hs  SpecialForms.hs  String.hs  Util.hs
test/: ParserSpec.hs
