name:                hscheme
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/ilya-bobyr/hscheme#readme
license:             BSD3
license-file:        LICENSE
author:              Ilya Bobyr
maintainer:          ilya.bobyr@gmail.com
copyright:           Copyright: (c) 2017 Ilya Bobyr
category:            Language 
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Ast, Parser, Evaluator, Error
                     , Evaluator.BuiltIn
                     , Evaluator.Environment
  other-modules:       Evaluator.BuiltIn.Util
                     , Evaluator.BuiltIn.IO
                     , Evaluator.BuiltIn.SpecialForms
                     , Evaluator.BuiltIn.String
  ghc-options:         -O2 -fdiagnostics-color=always
  build-depends:       base >= 4.7 && < 5
                     , parsec
                     , QuickCheck
                     , mtl
  default-language:    Haskell2010

executable hscheme-cli
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -O2 -fdiagnostics-color=always
  build-depends:       base
                     , hscheme
  default-language:    Haskell2010

test-suite hscheme-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  other-modules:       ParserSpec
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -O2 -fdiagnostics-color=always
  build-depends:       base
                     , hscheme
                     , hspec
                     , testing-feat
                     , QuickCheck
                     , quickcheck-unicode
                     , parsec
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/ilya-bobyr/hscheme
